Changes v2.5